gtk: Fix overlap of bottom arrow in menu

--- a/src/_sass/gtk/_common-3.20.scss
+++ b/src/_sass/gtk/_common-3.20.scss
@@ -884,7 +884,10 @@ combobox {
     > arrow {
       &.top { margin-top: -2px; }
 
-      &.bottom { margin-bottom: -2px * 3; }
+      &.bottom {
+        margin-top: 2px * 2;
+        margin-bottom: -2px * 3;
+      }
     }
   }
 
@@ -1547,6 +1550,7 @@ menu,
     }
 
     &.bottom {
+      margin-top: 4px * 2;
       margin-bottom: -4px * 3;
       border-top: 1px solid $border_color;
       border-radius: 0 0 2px 2px;
